* Fixed a ZPipe issue (thanks jove)
* [bug 858] Fixed a 100% cpu / crash bug
* [bug 872] Fixed a pm issue hopefully
* [bug 812] Fixed pm's being sent to bots
* Files with invalid crc-32, as per their sfv file, are no longer shared
* [bug 873] Added connect to hub option (thanks joakim tosteberg)
* Fixed an issue with linux file reading (thanks bart vullings and steven)

-- 0.687 2006-02-26 --
* Fixed XML file list generation for invalid filenames from other os's
* Fixed a rare refresh crash
* CID is now shown if no nick name is currently available for a user
* Fixed another crash when loading file lists
* Played some more with bufferedsocket performance
* Fixed some VS 2005 issues (thanks trem)
* Installer now removes old unicows library
* Updated to yaSSL 1.1.5
* Added possiblity to sort transfer view by all downloads first (thanks guitarm)
* Some cleanup for frame creation (thanks martin)
* Fixed some translation strings (thanks fleetcommand)
* Fixed some finished transfers frames issues (thanks trem)
* /pm and and a few other things work without user list in hub frame
* Added support for the ZPipe extension (test version) (thanks jove)
* Moved to subversion, CVS will no longer be maintained

-- 0.686 2006-02-13 --
* Fixed active search (oops)
* Fixed a crash when clicking on dchub links

-- 0.685 2006-02-12 --
* Fixed "browse list" being available for NMDC users
* [ADC] Removed obsolete CI field
* Fixed missing upload progress
* [bug 89] Readded dynamic compression disabling
* Added filelist download speed to filelist browser status bar
* Added advanced hublist filter (thanks trem)
* [bug 579] Fixed 0-byte files not being created if directory doesn't exist
* [bug 804] Cleaned up project files (thanks pothead)
* Socket buffer size = 0 now means use system default
* [bug 789] Fixed wrong nick being copied (thanks ullner)
* [bug 794] [ADC] Fixed automatic reconnect (thanks ullner)
* [bug 806] Fixed description for favorite hubs (thanks ullner)